--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -7,14 +7,17 @@
 
         <variable
             name="itemsViewModel"
-            type="com.magicbluepenguin.testapplication.ui.main.viewmodel.ItemsViewModel" />
+            type="com.magicbluepenguin.testapplication.ui.main.itemsfragment.viewmodel.ItemsViewModel" />
+        <variable
+            name="items"
+            type="androidx.lifecycle.LiveData" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.main.MainFragment">
+        tools:context=".ui.main.itemsfragment.MainFragment">
 
         <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
             android:id="@+id/pull_to_refresh"
@@ -27,7 +30,7 @@
                 android:id="@+id/items_list_view"
                 android:name="com.magicbluepenguin.testapplication.ui.main.MainFragment"
                 isFetchingMore="@{ itemsViewModel.isFetchingMoreItems }"
-                items="@{ itemsViewModel.itemsLiveData }"
+                items="@{ items }"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginStart="16dp"
