--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -8,6 +8,7 @@
         <variable
             name="itemsViewModel"
             type="com.magicbluepenguin.testapplication.ui.main.itemsfragment.viewmodel.ItemsViewModel" />
+
         <variable
             name="items"
             type="androidx.lifecycle.LiveData" />
@@ -31,6 +32,7 @@
                 android:name="com.magicbluepenguin.testapplication.ui.main.MainFragment"
                 isFetchingMore="@{ itemsViewModel.isFetchingMoreItems }"
                 items="@{ items }"
+                onLastItemShown="@{()-> itemsViewModel.fetchNextItems() }"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginStart="16dp"
