Changed naming to to ItemImage

--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -8,7 +8,7 @@
 
         <variable
             name="item"
-            type="com.magicbluepenguin.testapplication.data.models.Item" />
+            type="com.magicbluepenguin.testapplication.data.models.ImageItem" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
